@@ -258,7 +258,9 @@ ELLQp
 .roots: [9 + O(11^2)]~
 .tate: [6 + 8*11 + 5*11^2 + 8*11^4 + O(11^5), Mod(x, x^2 + (5 + 2*11 + 5*11^
 2 + 10*11^3 + 2*11^4 + O(11^5))), 3*11 + 7*11^2 + O(11^5), [6 + 3*11 + O(11^
-5), 6 + 11 + 9*11^2 + 11^3 + 2*11^4 + O(11^5)], 1]
+5), 6 + 11 + 9*11^2 + 11^3 + 2*11^4 + O(11^5)], 1, [[134943, 48065, 135911],
+ [92956, 62706, 135911], [6*11^2 + 9*11^3 + 2*11^4 + O(11^5), 10*11^4 + O(11
+^5)], 0]]
 FFELT
 .f: 3
 .mod: x^3 + x^2 + 1
