@@ -76,6 +76,8 @@ Done for version 2.8.1 (released ??/??/2016):
    15- [libpari] removed discrayabs, discrayabscond, discrayrel,
        discrayrelcond, discrayabslistlong: obsoleted since 2.0
    16- gcd(t_VEC/t_COL/t_MAT, ...) is now forbidden, same for lcm
+   17- E/Qp: add sequence of isogenous curves  to structure (converges to the
+       singular E_oo) => much faster ellpointtoz
 
 Done for version 2.8.0 (released 12/08/2016):
 
